  * debian/control:
    - Place Build-Depends on one line only, otherwise some tools cannot cope.
    - Use new xfree86 Build-Depends.
    - Lower-case first short description letter.
  * Move libglide3.so symlink to package libglide3-dev. (Closes: #242063)
  * Added a BUGS file to keep track of things.
  * debian/patches/glide3x-libtool-patch: Updated to latest libtool 1.5.4.
  * debian/copyright: Cleaned and use properly "License:" instead of
    "Copyright:".

 -- Guillem Jover <guillem@debian.org>  UNRELEASED

glide (2002.04.10-5) unstable; urgency=low

  * debian/control:
    - Tighten libtool Build-Depends. (Closes: #215512)
    - Removed libglide3 Suggests for device3dfx, as it used DRI instead.
  * debian/patches/swlibs-004-ioctl: Adapt to the new libc's ioctl.h.
  * debian/patches/glide3x-autoconf-update: Updated to fix missing symbols
    in glide3 H5 library, due to deprecated usage of compiler options.
    Thanks to Nathan Hand <Nathan.Hand@defence.gov.au>.
  * Debconf template translations:
    - Updated Catalan. Some verbal form fixes.

 -- Guillem Jover <guillem@debian.org>  Fri,  5 Dec 2003 06:03:10 +0100

glide (2002.04.10-4) unstable; urgency=low

  * debian/control:
    - Now -dev packages are correctly architecture all.
    - Remove legacy Conflicts with old glide packages.
  * debian/rules:
    - Build unconditionally all indep packages, regardless of architecture.
  * Updated TODO list.

 -- Guillem Jover <guillem@debian.org>  Sun, 14 Sep 2003 18:49:37 +0200

glide (2002.04.10-3) unstable; urgency=low

  * The Great Unification Release:
    - Added 64bit support, deprecating glide3-alpha. Patches:
      debian/patches/z01-64bit-support
      debian/patches/z02-64bit-support

  * Switch from inbound dbs to the Debian dbs package. Depend on dbs >= 0.25
    as previous versions had a bug with sys-build.mk.
  * debian/rules: Now only one rule unpacks and patches the source. It was
    causing problems with 64 bit ports building only glide2.