@@ -3,15 +3,29 @@
 #export DH_VERBOSE = 1
 
 export FX_GLIDE_PIC = 1
-this = make -f debian/rules
+
+include debian/vars
+
+SRC_DIR = $(SOURCE_DIR)
+
+this = $(MAKE) -f debian/rules
+dbs_build := $(MAKE) -f /usr/share/dbs/sys-build.mk
+glide2_build := $(MAKE) -C $(SRC_DIR)/glide2x -f makefile.linux
+
+pkg_dir := $(PWD)/debian
+
+glide2_bin_dir := $(pkg_dir)/glide2-bin
+glide3_bin_dir := $(pkg_dir)/glide3-bin
+libglide2_dir := $(pkg_dir)/libglide2
+libglide3_dir := $(pkg_dir)/libglide3
+libglide2_dev_dir := $(pkg_dir)/libglide2-dev
+libglide3_dev_dir := $(pkg_dir)/libglide3-dev
 
 INSTALL=install
 INSTALL_PROGRAM=$(INSTALL) -m 755
 INSTALL_SCRIPT=$(INSTALL) -m 755
 INSTALL_LIB=$(INSTALL) -m 644
 INSTALL_DATA=$(INSTALL) -m 644
-
-SYS_BUILD := /usr/share/dbs/sys-build.mk
 
 DEB_HOST_ARCH := $(shell dpkg-architecture -qDEB_HOST_ARCH)
 
@@ -35,43 +49,37 @@ endif
 endif
 
 
-include debian/vars
-SRC_DIR=$(SOURCE_DIR)
-
 debian/po/templates.pot: debian/libglide2.templates debian/libglide3.templates
 	@debconf-updatepo
 
-setup:
-	$(MAKE) -f $(SYS_BUILD) source.make
+unpack:
+	$(dbs_build) source.make
 
-make_patch:
-	$(MAKE) -f $(SYS_BUILD) make-diff
+make-patch:
+	$(dbs_build) make-diff
 
 $(SRC_DIR)/glide2x $(SRC_DIR)/glide3x: $(STAMP_DIR)/SRC_DIR_glide
-$(STAMP_DIR)/SRC_DIR_glide:
-	$(MAKE) -f $(SYS_BUILD) source.make
+$(STAMP_DIR)/SRC_DIR_glide: unpack
 	cd $(SRC_DIR)/glide2x; ln -s ../swlibs swlibs
 	cd $(SRC_DIR)/glide3x; ln -s ../swlibs swlibs
 	touch $(STAMP_DIR)/SRC_DIR_glide
 
 ifeq ($(DEB_HOST_ARCH),i386)
-BUILD_TARGETS := build.glide2
+BUILD_GLIDE2 := build.glide2
 endif
 
-build: $(BUILD_TARGETS) build.glide3 debian/po/templates.pot
+build: $(BUILD_GLIDE2) build.glide3 debian/po/templates.pot
 build.glide2: build.glide2.cvg build.glide2.h3
 build.glide3: build.glide3.h3 build.glide3.h5
 
 build.glide2.cvg: $(SRC_DIR)/glide2x $(STAMP_DIR)/build.glide2.cvg
 $(STAMP_DIR)/build.glide2.cvg:
-	$(MAKE) -C $(SRC_DIR)/glide2x -f makefile.linux FX_GLIDE_HW=cvg \
-		CNODEBUG="$(CFLAGS)"
+	$(glide2_build) FX_GLIDE_HW=cvg CNODEBUG="$(CFLAGS)"
 	touch $(STAMP_DIR)/build.glide2.cvg
 
 build.glide2.h3: $(SRC_DIR)/glide2x $(STAMP_DIR)/build.glide2.h3
 $(STAMP_DIR)/build.glide2.h3:
-	$(MAKE) -C $(SRC_DIR)/glide2x -f makefile.linux FX_GLIDE_HW=h3 \
-		CNODEBUG="$(CFLAGS)"
+	$(glide3_build) FX_GLIDE_HW=h3 CNODEBUG="$(CFLAGS)"
 	touch $(STAMP_DIR)/build.glide2.h3
 
 build.glide3.h3: $(SRC_DIR)/glide3x $(STAMP_DIR)/build.glide3.h3
@@ -106,12 +114,12 @@ sys-clean:
 	rm -rf $(SRC_DIR)/glide3x/build.h3 $(PWD)/debian/tmp.h3
 	rm -rf $(SRC_DIR)/glide3x/build.h5 $(PWD)/debian/tmp.h5
 	rm -f $(STAMP_DIR)/build.glide2.* $(STAMP_DIR)/build.glide3.*
-	$(MAKE) -C $(SRC_DIR)/glide2x -f makefile.linux FX_GLIDE_HW=cvg clobber
-	$(MAKE) -C $(SRC_DIR)/glide2x -f makefile.linux FX_GLIDE_HW=h3 clobber
+	$(glide2_build) FX_GLIDE_HW=cvg clobber
+	$(glide2_build) FX_GLIDE_HW=h3 clobber
 
 clean:
-# No need to run clean
-	$(MAKE) -f $(SYS_BUILD) source.clean
+	# No need to run clean
+	$(dbs_build) source.clean
 	rm -f $(STAMP_DIR)
 	rm -rf $(PWD)/debian/tmp.h3 $(PWD)/debian/tmp.h5
 	dh_clean
@@ -119,14 +127,12 @@ clean:
 binary: binary-indep binary-arch
 
 ifeq ($(DEB_HOST_ARCH),i386)
-BINARY_ARCH_TARGETS := binary-libglide2 binary-glide2-bin
+BINARY_ARCH_GLIDE2 := binary-libglide2 binary-glide2-bin
 endif
 
 binary-indep: build binary-libglide2-dev binary-libglide3-dev
-# Add rules here to build the indep debs.
 
-binary-arch: build $(BINARY_ARCH_TARGETS) binary-libglide3
-# Add rules here to build the arch debs.
+binary-arch: build $(BINARY_ARCH_GLIDE2) binary-libglide3
 
 binary-libglide2:
 	DH_OPTIONS="-plibglide2" $(this) binary-libglide2-real
@@ -139,11 +145,11 @@ binary-libglide2-real: build
 	dh_installdirs
 
 	$(INSTALL_LIB) $(SRC_DIR)/glide2x/cvg/lib/libglide.so.2.53 \
-		$(PWD)/debian/libglide2/usr/lib/glide2/libglide_cvg.so.2.53
+		       $(libglide2_dir)/usr/lib/glide2/libglide_cvg.so.2.53
 	$(INSTALL_LIB) $(SRC_DIR)/glide2x/h3/lib/libglide.so.2.60 \
-		$(PWD)/debian/libglide2/usr/lib/glide2/libglide_h3.so.2.60
+		       $(libglide2_dir)/usr/lib/glide2/libglide_h3.so.2.60
 	$(INSTALL_LIB) $(SRC_DIR)/glide2x/swlibs/lib/libtexus.so.1.1 \
-		       $(PWD)/debian/libglide2/usr/lib/
+		       $(libglide2_dir)/usr/lib/
 	dh_strip
 
 	dh_installdocs
@@ -170,22 +176,22 @@ binary-libglide2-dev-real: build
 	dh_installdirs
 
 	$(INSTALL_DATA) $(SRC_DIR)/glide2x/h3/include/glide.h \
-			$(PWD)/debian/libglide2-dev/usr/include/glide/
+			$(libglide2_dev_dir)/usr/include/glide/
 	$(INSTALL_DATA) $(SRC_DIR)/glide2x/h3/include/glidesys.h \
-			$(PWD)/debian/libglide2-dev/usr/include/glide/
+			$(libglide2_dev_dir)/usr/include/glide/
 	$(INSTALL_DATA) $(SRC_DIR)/glide2x/h3/include/glideutl.h \
-			$(PWD)/debian/libglide2-dev/usr/include/glide/
+			$(libglide2_dev_dir)/usr/include/glide/
 	$(INSTALL_DATA) $(SRC_DIR)/glide2x/h3/include/sst1vid.h \
-			$(PWD)/debian/libglide2-dev/usr/include/glide/
+			$(libglide2_dev_dir)/usr/include/glide/
 	$(INSTALL_DATA) $(SRC_DIR)/glide2x/h3/include/gump.h \
-			$(PWD)/debian/libglide2-dev/usr/include/glide/
+			$(libglide2_dev_dir)/usr/include/glide/
 
 	$(INSTALL_DATA) $(SRC_DIR)/glide2x/swlibs/include/3dfx.h \
-			$(PWD)/debian/libglide2-dev/usr/include/glide/
+			$(libglide2_dev_dir)/usr/include/glide/
 	$(INSTALL_DATA) $(SRC_DIR)/glide2x/swlibs/include/linutil.h \
-			$(PWD)/debian/libglide2-dev/usr/include/glide/
+			$(libglide2_dev_dir)/usr/include/glide/
 	$(INSTALL_DATA) $(SRC_DIR)/glide2x/swlibs/include/texus.h \
-			$(PWD)/debian/libglide2-dev/usr/include/glide/
+			$(libglide2_dev_dir)/usr/include/glide/
 
 	dh_strip
 
@@ -211,9 +217,9 @@ binary-glide2-bin-real: build
 	dh_installdirs
 
 	$(INSTALL_PROGRAM) $(SRC_DIR)/glide2x/h3/glide/tests/test[0-9][0-9] \
-			   $(PWD)/debian/glide2-bin/usr/lib/glide2/bin/
+			   $(glide2_bin_dir)/usr/lib/glide2/bin/
 	$(INSTALL_PROGRAM) $(SRC_DIR)/glide2x/cvg/bin/pass \
-			   $(PWD)/debian/glide2-bin/usr/lib/glide2/bin/
+			   $(glide2_bin_dir)/usr/lib/glide2/bin/
 	dh_strip
 
 	dh_installdocs
@@ -238,9 +244,9 @@ binary-libglide3-real: build
 	dh_installdirs
 
 	$(INSTALL_LIB) $(PWD)/debian/tmp.h3/usr/lib/libglide3.so.3.10.0 \
-		$(PWD)/debian/libglide3/usr/lib/glide3/libglide3_h3.so.3.10.0
+		       $(libglide3_dir)/usr/lib/glide3/libglide3_h3.so.3.10.0
 	$(INSTALL_LIB) $(PWD)/debian/tmp.h5/usr/lib/libglide3.so.3.10.0 \
-		$(PWD)/debian/libglide3/usr/lib/glide3/libglide3_h5.so.3.10.0
+		       $(libglide3_dir)/usr/lib/glide3/libglide3_h5.so.3.10.0
 
 	dh_strip
 
@@ -268,7 +274,7 @@ binary-libglide3-dev-real: build
 	dh_installdirs
 
 	$(INSTALL_DATA) $(PWD)/debian/tmp.h5/usr/include/glide3/* \
-			$(PWD)/debian/libglide3-dev/usr/include/glide3/
+			$(libglide3_dev_dir)/usr/include/glide3/
 
 	dh_strip
 
@@ -294,7 +300,7 @@ binary-glide3-bin-real: build
 	dh_installdirs
 
 	$(INSTALL_PROGRAM) $(SRC_DIR)/glide3x/h3/glide/tests/test[0-9][0-9] \
-			   $(PWD)/debian/glide3-bin/usr/lib/glide3/bin/
+			   $(glide3_bin_dir)/usr/lib/glide3/bin/
 	dh_strip
 
 	dh_installdocs
@@ -308,5 +314,7 @@ binary-glide3-bin-real: build
 	dh_gencontrol
 	dh_builddeb
 
-.PHONY: $(SRC_DIR)/glide2x
+.PHONY: unpack make-patch build sys-clean clean binary binary-arch binary-indep
+.PHONY: build.glide2 build.glide2.cvg build.glide2.h3
+.PHONY: build.glide3 build.glide3.h3 build.glide3.h5
 
